--- a/my_first_site/styles.css
+++ b/my_first_site/styles.css
@@ -1,34 +1,50 @@
 body {
-    background-color: rgb(232, 228, 236);
-    font-family: Arial;
-    text-align: center;
+    background-color: rgb(253, 250, 255);
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    justify-content: center;
+    text-align: left;
+    margin: 10%;
+    
+
+    
   }
   
   h1 {
-    font-size: 72px;
+    font-size: 60px; 
+    color: #f47933;
+    text-align: center;
+  }
+ img{
+   float: unset
+ }
+ .video{ 
+   align-self: center;
+   
+ }
+  .mega {
+    float: left;
+  }
+  .tree{
+    align-content: center;
+  }
+  .wall{
+  }
+  .dyna{
+    float: right;
+  }
+  .dex{
+    float: right;
+  }
+  h3 { 
+    font-size: 40px; color: #f47933;
+   text-align: center
   }
   
   p {
     font-size: 28px;
   }
-  
-  button {
-      color: white;
-      font-size: 125%;
-      border-radius: 4px;
-      border: none;
-      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-      background: rgb(143, 6, 235);
-      padding: 10px;
-      outline: none;
-      cursor: pointer;
+  a{
+    text-decoration: #f47933;
   }
   
-  button:hover {
-    background: rgb(252, 1, 198);
-    padding: 12px;
-  }
+ 
